Updated revision header

--- a/webgl_graph.html
+++ b/webgl_graph.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- Simple oscilloscope trace plot using WebGL
-     Copyright (c) Jeremy P Bentham 2021
+     Copyright (c) Jeremy P Bentham 2021. See http://iosoft.blog for details
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
